# boost-graph-benchmarks

./: .gitignore  README.md  requirements-common.txt
.github/workflows/: benchmark.yml
louvain/: README.md  requirements.txt  run_benchmark.sh
louvain/results/: ablation.csv  correctness.csv  epsilon.csv  incremental.csv  runtime.csv  trust_q.csv
louvain/scripts/: benchmark.py  compare_passes.py  visualize.py
louvain/src/: CMakeLists.txt  bgl_louvain_benchmark.hpp  bgl_louvain_listS_vecS.cpp  bgl_louvain_listS_vecS_noinc.cpp  bgl_louvain_matrix.cpp  bgl_louvain_matrix_noinc.cpp  bgl_louvain_setS_vecS.cpp  bgl_louvain_setS_vecS_noinc.cpp  bgl_louvain_vecS_vecS.cpp  bgl_louvain_vecS_vecS_noinc.cpp
